<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">去哪钓</string>
    <string name="base_ui_close">关闭</string>
    <string name="rule_link">http://www.qndiao.cn/index.html</string>
    <string name="help_link">http://www.qndiao.cn/index.html</string>

    <!-- welcome页面 begin -->
    <string name="wel_reg">注册</string>
    <string name="wel_login">立即登陆</string>
    <!-- welcome end -->


    <string name="please_input_pswd">请输入密码</string>
    
    <!-- 注册页面 begin -->
    <string name="reg_title">注册</string>
    <string name="reg_phone_num">手机号</string>
    <string name="reg_pswd">密码</string>
    <string name="reg_check_code">验证码</string>
    <string name="reg_reg_and_rule">注册协议/服务条款</string>
    <string name="reg_get_check_code">获取验证码</string>
    <string name="reg_input_phone_num">输入手机号</string>
    <string name="reg_set_pswd">设置密码</string>
    <string name="reg_input_check_code">输入验证码</string>
    <string name="reg_next">下一步</string>
    <string name="reg_next_title">完善资料</string>
    <string name="reg_next_account_text">账号:</string>
    <string name="reg_next_phone_num_text">手机:</string>
    <string name="reg_next_nick_text">昵称</string>
    <string name="reg_next_release_input">请填写</string>
    <string name="reg_next_release_chose">请选择</string>
    <string name="reg_next_fishing_years">钓龄</string>
    <string name="reg_next_fishing_times">频次</string>
    <string name="reg_next_location_text">定位</string>
    <string name="reg_next_get_location_btn">获取</string>
    <string name="reg_next_skip">跳过，先看看</string>

    <string-array name="reg_next_fishing_years_spinner">
        <item>1年</item>
        <item>2年</item>
        <item>3年</item>
        <item>4年</item>
        <item>5年</item>
        <item>5年+</item>
    </string-array>
    <string-array name="reg_next_fishing_times_spinner">
        <item>1次/月</item>
        <item>5次/月</item>
        <item>10次/月</item>
        <item>20次/月</item>
        <item>30+次/月</item>
    </string-array>

    <!-- 注册页面 end -->


    <!-- 登陆页面 begin -->
    <string name="login_account">账号:</string>
    <string name="login_account_phone_num">手机号/账号</string>
    <string name="phone"></string>
    <string name="login_pswd">密码:</string>
    <string name="login_forgot_pswd">忘记密码</string>
    <string name="login_reg_new_account">注册新用户</string>
    <string name="login_title">登陆</string>
    <string name="help">帮助</string>
    <!-- 登陆页面 end -->


    <!-- 忘记密码页面 begin -->
    <string name="forget_pswd_title">忘记密码</string>
    <string name="forget_pswd_text_phone_num">手机号</string>
    <string name="forget_pswd_input_phone_num">输入手机号</string>
    <string name="forget_pswd_account_phone_num">手机号/账号</string>
    <string name="forget_pswd_text_new_pswd">新密码</string>
    <string name="forget_pswd_input_new_pswd">输入新密码</string>
    <string name="forget_pswd_text_check_code">验证码</string>
    <string name="forget_pswd_input_check_code">输入验证码</string>
    <string name="forget_pswd_help">帮助</string>
    <string name="forget_pswd_ok">确定</string>
    <!-- 忘记页面 end -->


    <!-- Home页面 begin -->
    <string name="home_fishing_place">地图</string>
    <string name="home_care">关注</string>
    <string name="home_appear">资讯</string>
    <string name="home_fishing_news">钓播</string>
    <string name="home_my">我的</string>

    <string name="home_fishing_place_title">最近钓场</string>
    <string name="home_care_title">我关注的钓场</string>
    <string name="home_appear_title">发现</string>
    <string name="home_fishing_news_title">钓播</string>
    <string name="home_my_title">我的</string>

    <string name="hfs_splace_type">场景</string>
    <string name="hfs_fishing_tools_store">渔具店</string>
    <string name="hfs_detail">详情</string>
    <string name="hfs_care">关注</string>
    <string name="hfs_share">分享</string>
    <string name="hfs_nav">导航</string>
    <string name="hfs_distance_format">距您15公里</string>

    <string name="sayu_news">撒鱼动态</string>
    <string name="surrounding">配套环境</string>
    <string name="imgs">场馆照片</string>
    <string name="contact_us">联系我们</string>

    <string-array name="hfs_splace_type">
        <item>黑坑</item>
        <item>大棚</item>
        <item>定制</item>
        <item>大物</item>
        <item>练杆</item>
        <item>高钓</item>
        <item>休闲</item>
        <item>野钓</item>
    </string-array>

    <string name="home_search_btn">搜索</string>

    <string name="hmy_listview1_my_care_extra">钓场~播况~GO</string>
    <string-array name="hmy_listview1">
        <item>我的播况</item>
        <item>我的关注</item>
        <item>附近钓场</item>
        <item>附近钓友</item>
        <item>扫一扫</item>
    </string-array>

    <string-array name="hmy_listview2">
        <item>问题反馈</item>
        <item>清空缓存</item>
        <item>关于我们</item>
    </string-array>
    <!-- Home页面 end -->

    <string-array name="hmy_listview1_icons">
        <item>@drawable/incon_148</item>
        <item>@drawable/incon_151_50</item>
        <item>@drawable/incon_151</item>
        <item>@drawable/incon_153</item>
        <item>@drawable/incon_155_49</item>
    </string-array>
    <string-array name="hmy_listview2_icons">
        <item>@drawable/incon_155</item>
        <item>@drawable/incon_155_47</item>
        <item>@drawable/incon_159</item>
    </string-array>
    
    
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="input_text_count">还可以输入%d个字</string>

    <integer name="comment_max_count">10</integer>
</resources>