<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foot_bar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/foot_bar_height"
    android:background="@color/foot_bar_bg_color"
    android:gravity="center"
    android:orientation="horizontal">

    <!-- 钓场 -->

    <LinearLayout
        android:id="@+id/foot_bar_fishing_place"
        style="@style/foot_bar_item_style">

        <ImageView
            style="@style/foot_bar_item_icon_style"
            android:src="@drawable/map" />

        <TextView
            style="@style/foot_bar_item_text_style"
            android:text="@string/home_fishing_place" />
    </LinearLayout>

    <!-- 关注 -->
    <FrameLayout
        style="@style/foot_bar_item_style"
        >
        <LinearLayout
            android:id="@+id/foot_bar_care"
            style="@style/foot_bar_item_style"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                style="@style/foot_bar_item_icon_style"
                android:src="@drawable/hart" />

            <TextView
                style="@style/foot_bar_item_text_style"
                android:text="@string/home_care" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:paddingRight="@dimen/base_space_2"
            android:paddingTop="@dimen/base_space">

            <TextView
                android:id="@+id/care_bedger"
                style="@style/badger_style"
                android:text="15"></TextView>
        </LinearLayout>
    </FrameLayout>

    <!-- 资讯  style="@style/foot_bar_item_style"-->

    <LinearLayout
        android:id="@+id/foot_bar_appear"
        style="@style/foot_bar_item_style"
        >

        <ImageView
            style="@style/foot_bar_item_icon_style"
            android:src="@drawable/news" />

        <TextView
            style="@style/foot_bar_item_text_style"
            android:text="@string/home_appear" />
    </LinearLayout>
    <!-- 钓播 -->

    <LinearLayout
        android:id="@+id/foot_bar_fishing_news"
        style="@style/foot_bar_item_style">

        <ImageView
            style="@style/foot_bar_item_icon_style"
            android:src="@drawable/play" />

        <TextView
            style="@style/foot_bar_item_text_style"
            android:text="@string/home_fishing_news" />
    </LinearLayout>

    <!-- 我的 -->

    <LinearLayout
        android:id="@+id/foot_bar_my"
        style="@style/foot_bar_item_style">

        <ImageView
            style="@style/foot_bar_item_icon_style"
            android:src="@drawable/mine" />

        <TextView
            style="@style/foot_bar_item_text_style"
            android:text="@string/home_my" />
    </LinearLayout>

</LinearLayout>