<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg_color"
    android:orientation="vertical"
    tools:context=".ui.RegisterUI" >

    <RelativeLayout style="@style/head_bar_style" >

        <RelativeLayout
            android:id="@+id/base_ui_close"
            style="@style/head_bar_pic_left_btn_style" >

            <ImageView
                style="@style/head_bar_pic_style"
                android:src="@drawable/arrow_left" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/base_ui_help"
            style="@style/head_bar_pic_right_btn_style" >

            <ImageView
                style="@style/head_bar_pic_style"
                android:background="@drawable/help" />
        </RelativeLayout>

        <TextView
            android:id="@+id/base_head_bar_title"
            style="@style/head_bar_title_style"
            android:layout_toLeftOf="@id/base_ui_help"
            android:layout_toRightOf="@id/base_ui_close"
            android:text="@string/forget_pswd_title" >
        </TextView>

        <TextView
            style="@style/head_bar_bottom_line_style"
            android:layout_alignParentBottom="true" >
        </TextView>
    </RelativeLayout>
    <!-- head end -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView style="@style/login_icon_style" />
    </LinearLayout>

    <RelativeLayout style="@style/login_listitem_style" >

        <ImageView
            android:id="@+id/login_text_phone_num"
            style="@style/login_listitem_left_drawable_style"
            android:src="@drawable/phone" />
        
        <TextView
            android:id="@+id/ui_forget_get_check_code"
            style="@style/base_border_btn_style"
            android:layout_alignParentRight="true"
            android:text="@string/reg_get_check_code"/>
        
        <EditText
            android:id="@+id/text_phone_num_input"
            style="@style/base_input_style"
            android:layout_marginLeft="@dimen/list_item_divider"
            android:layout_toLeftOf="@id/ui_forget_get_check_code"
            android:layout_toRightOf="@id/login_text_phone_num"
            android:hint="@string/login_account_phone_num"
            android:maxLength="11"
            android:text="@string/phone"
            android:inputType="number" />

        <TextView
            style="@style/head_bar_bottom_line_style"
            android:layout_alignParentBottom="true" >
        </TextView>
    </RelativeLayout>

    
    <RelativeLayout style="@style/login_listitem_style" >

        <ImageView
            android:id="@+id/sms"
            style="@style/login_listitem_left_drawable_style"
            android:src="@drawable/sms" />

        <EditText
            android:id="@+id/checkCode"
            style="@style/base_input_style"
            android:layout_marginLeft="@dimen/list_item_divider"
            android:layout_toRightOf="@id/sms"
            android:hint="@string/forget_pswd_text_check_code"
            android:inputType="number" />

        <TextView
            style="@style/head_bar_bottom_line_style"
            android:layout_alignParentBottom="true" >
        </TextView>
    </RelativeLayout>
    
    <RelativeLayout style="@style/login_listitem_style" >

        <ImageView
            android:id="@+id/login_pswd_text"
            style="@style/login_listitem_left_drawable_style"
            android:src="@drawable/lock" />

        <ImageView
            android:id="@+id/hide_show_pwsd"
            style="@style/hide_show_pwsd"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true" />

        <EditText
            android:id="@+id/login_pswd_input"
            style="@style/base_input_style"
            android:hint="@string/please_input_pswd"
            android:layout_toLeftOf="@id/hide_show_pwsd"
            android:layout_toRightOf="@id/login_pswd_text" />

        <TextView
            style="@style/head_bar_bottom_line_style"
            android:layout_alignParentBottom="true" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        style="@style/login_listitem_style"
        android:layout_marginTop="@dimen/list_item_space_mid"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ok"
            style="@style/base_button_style"
            android:text="@string/forget_pswd_ok" />
    </LinearLayout>
</LinearLayout>