<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base_color"
    android:orientation="vertical"
    tools:context=".ui.RegisterUI" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_bar_height"
        android:background="@color/head_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reg_title"
            android:textColor="#ffffff"
            android:textSize="@dimen/head_bar_font_hegiht" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_item_padding_left"
        android:paddingRight="@dimen/list_item_padding_right" >

        <ImageView
            android:layout_width="@dimen/base_icon_width"
            android:layout_height="@dimen/base_icon_width"
            android:background="@drawable/circle"
            android:src="@drawable/icon" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:background="@color/list_item_backgroud"
        android:paddingLeft="@dimen/list_item_padding_left"
        android:paddingRight="@dimen/list_item_padding_right" >

        <TextView
            android:id="@+id/reg_text_phone_num_text"
            android:layout_width="@dimen/reg_3_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/reg_phone_num"
            android:textColor="#000000"
            android:textSize="@dimen/list_item_base_text_size" />

        <Button
            android:id="@+id/reg_get_check_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/list_item_space_mid"
            android:layout_marginTop="8dp"
            android:background="@drawable/gray_shape"
            android:onClick="onClick"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/reg_get_check_code"
            android:textColor="#ffffff"
            android:textSize="@dimen/list_item_hint_text_size" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/list_item_space_mid"
            android:layout_toLeftOf="@id/reg_get_check_code"
            android:layout_toRightOf="@id/reg_text_phone_num_text"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/reg_input_phone_num"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textColor="#999999"
            android:textColorHint="#999999"
            android:textSize="@dimen/list_item_hint_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginTop="@dimen/list_item_space"
        android:background="@color/list_item_backgroud"
        android:paddingLeft="@dimen/list_item_padding_left"
        android:paddingRight="@dimen/list_item_padding_right" >

        <TextView
            android:id="@+id/reg_pswd_text"
            android:layout_width="@dimen/reg_3_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/reg_pswd"
            android:textColor="#000000"
            android:textSize="@dimen/list_item_base_text_size" />

        <com.go.fish.view.Switcher
            android:id="@+id/reg_save_pswd"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/list_item_space_mid"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/reg_input_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/list_item_space_mid"
            android:layout_toLeftOf="@id/reg_save_pswd"
            android:layout_toRightOf="@id/reg_pswd_text"
            android:inputType="textPassword"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/reg_set_pswd"
            android:singleLine="true"
            android:textColor="#999999"
            android:textColorHint="#999999"
            android:textSize="@dimen/list_item_hint_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginTop="@dimen/list_item_space"
        android:background="@color/list_item_backgroud"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/list_item_padding_left"
        android:paddingRight="@dimen/list_item_padding_right" >

        <TextView
            android:layout_width="@dimen/reg_3_width"
            android:layout_height="wrap_content"
            android:text="@string/reg_check_code"
            android:textColor="#000000"
            android:textColorHint="#999999"
            android:textSize="@dimen/list_item_base_text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_space_mid"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/reg_input_check_code"
            android:imeActionLabel="@string/reg_next"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="@dimen/list_item_hint_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin_left_right_match_parent"
        android:layout_marginTop="@dimen/list_item_space_max"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/reg_agree_rule"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/app_base_btn_color"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="√"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/reg_agree_rule_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/list_item_space"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:text="@string/reg_reg_and_rule"
            android:textColor="@color/app_base_btn_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_space"
        android:orientation="vertical" >

        <Button
            android:id="@+id/reg_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:layout_marginLeft="@dimen/button_margin_left_right_match_parent"
            android:layout_marginRight="@dimen/button_margin_left_right_match_parent"
            android:background="@drawable/green_shape"
            android:onClick="onClick"
            android:text="@string/reg_next" />
    </LinearLayout>

</LinearLayout>