<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/app_base_color_alpha"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="@dimen/base_space">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp" >

            <TextView
                android:id="@+id/float_view_detail_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="center_vertical"
                android:onClick="onMapFloatViewClick"
                android:text="详情"
                android:textColor="@android:color/white"
                android:textSize="@dimen/base_font_size_h4" />

            <com.go.fish.view.MarqueeText
                android:id="@+id/float_view_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@id/float_view_detail_btn"
                android:layout_toLeftOf="@id/float_view_detail_btn"
                android:textColor="@android:color/white"
                android:ellipsize="marquee"
                android:focusable="true" 
		        android:marqueeRepeatLimit="1" 
		        android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textSize="@dimen/base_font_size_h5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="35dp" >

            <TextView
                android:id="@+id/float_view_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:text="@string/hfs_distance_format"
                android:textColor="@android:color/white"
                android:textSize="@dimen/base_font_size_h4" />

            <TextView
                android:id="@+id/float_view_nav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/point"
                android:onClick="onMapFloatViewClick"
                android:text="@string/hfs_nav"
                android:textColor="@android:color/white"
                android:textSize="@dimen/base_font_size_h4" />

            <TextView
                android:id="@+id/float_view_care_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/float_view_care_btn"
                android:gravity="center_vertical"
                android:onClick="onMapFloatViewClick"
                android:text="@string/hfs_care"
                android:textColor="@android:color/white"
                android:textSize="@dimen/base_font_size_h4" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>